updated to java21, updated dependencies, got rid of powermock